fix: hide invisible error spans

--- a/blocks/popup/__form-input-container/popup__form-input-container.css
+++ b/blocks/popup/__form-input-container/popup__form-input-container.css
@@ -3,4 +3,5 @@
   display: flex;
   flex-direction: column;
   row-gap: 3px;
+  min-height: 60px;
 }
