--- a/blocks/popup/__form-input-error/popup__form-input-error.css
+++ b/blocks/popup/__form-input-error/popup__form-input-error.css
@@ -4,5 +4,4 @@
   font-size: 12px;
   line-height: 1.25;
   color: #f00;
-  min-height: 30px;
 }
